# zephyr

./: .gitignore  .ruff-excludes.toml  CMakeLists.txt  MAINTAINERS.yml
.github/workflows/: codechecker.yaml
LICENSES/: exceptions.yaml
arch/riscv/core/: fatal.c
arch/x86/: gen_idt.py  gen_mmu.py
arch/x86/zefi/: zefi.py
arch/xtensa/core/: fatal.c  gen_vectors.py  gen_zsr.py  xtensa_intgen.py
boards/arm/adafruit_metro_m0_express/: Kconfig.board  Kconfig.defconfig  adafruit_metro_m0_express-pinctrl.dtsi  adafruit_metro_m0_express.dts  adafruit_metro_m0_express.yaml  adafruit_metro_m0_express_defconfig  board.cmake
boards/arm/mimx8mm_evk/: mimx8mm_evk-pinctrl.dtsi  mimx8mm_evk.dts
cmake/compiler/: compiler_flags_template.cmake
cmake/compiler/gcc/: compiler_flags.cmake
cmake/modules/: twister.cmake
cmake/sca/codechecker/: sca.cmake
doc/develop/: modules.rst
doc/develop/sca/: codechecker.rst
doc/develop/west/: zephyr-cmds.rst
doc/releases/: migration-guide-4.4.rst  release-notes-4.4.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: adc_handlers.c
drivers/auxdisplay/: auxdisplay_handlers.c
drivers/bbram/: bbram_handlers.c
drivers/cache/: cache_handlers.c
drivers/can/: can_handlers.c
drivers/charger/: charger_handlers.c
drivers/clock_control/: clock_control_mcux_ccm.c
drivers/comparator/: comparator_handlers.c
drivers/counter/: Kconfig.mcux_snvs  counter_handlers.c  maxim_ds3231.c
drivers/dac/: dac_handlers.c
drivers/dma/: dma_handlers.c
drivers/eeprom/: eeprom_handlers.c
drivers/entropy/: entropy_handlers.c
drivers/espi/: espi_handlers.c
drivers/ethernet/: eth.h
drivers/flash/: flash_handlers.c  flash_simulator.c  flash_util.c  nrf_qspi_nor.c
drivers/fuel_gauge/: emul_fuel_gauge_syscall_handlers.c  fuel_gauge_syscall_handlers.c
drivers/gpio/: gpio_handlers.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_gpio_rev.c  hwinfo_handlers.c  hwinfo_weak_impl.c
drivers/hwspinlock/: hwspinlock_handlers.c
drivers/i2c/: i2c_handlers.c
drivers/i2s/: i2s_handlers.c
drivers/i3c/: i3c_handlers.c
drivers/ipm/: ipm_handlers.c
drivers/kscan/: CMakeLists.txt  Kconfig  Kconfig.tt21x  kscan_handlers.c  kscan_tt21x.c
drivers/led/: led_handlers.c
drivers/mbox/: mbox_handlers.c
drivers/misc/devmux/: devmux.c
drivers/misc/timeaware_gpio/: timeaware_gpio_handlers.c
drivers/nfc/: CMakeLists.txt  Kconfig  Kconfig.pn5180  nfc_pn5180.c  nfc_pn5180.h
drivers/peci/: peci_handlers.c
drivers/ps2/: ps2_handlers.c
drivers/ptp_clock/: ptp_clock.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.mcux_ipwm  pwm_handlers.c  pwm_mcux_ipwm.c
drivers/reset/: CMakeLists.txt  Kconfig  Kconfig.gpio  reset_gpio.c
drivers/retained_mem/: retained_mem_handlers.c
drivers/rtc/: CMakeLists.txt  Kconfig  Kconfig.nxp_imx_snvs  rtc_handlers.c  rtc_nxp_imx_snvs.c
drivers/sensor/: sensor_handlers.c
drivers/sensor/microchip/: CMakeLists.txt  Kconfig
drivers/serial/: uart_handlers.c
drivers/smbus/: smbus_handlers.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.mcux_ecspi  Kconfig.sam  Kconfig.spi_generic  spi_generic.c  spi_handlers.c  spi_mcux_ecspi.c  spi_sam.c
drivers/syscon/: CMakeLists.txt  Kconfig  Kconfig.zephyr_ram  syscon_zephyr_ram.c
drivers/virtualization/: virt_ivshmem_handlers.c
drivers/w1/: w1_handlers.c
drivers/watchdog/: wdt_handlers.c
dts/arm/nxp/: nxp_imx8m_m4.dtsi  nxp_imx8ml_m7.dtsi
dts/bindings/hwinfo/: zephyr,gpio-revison.yaml
dts/bindings/kscan/: paradetech,tt21x.yaml
dts/bindings/nfc/: nfc-controller.yaml  nxp,pn5180.yaml
dts/bindings/pwm/: nxp,imx-ipwm.yaml
dts/bindings/reset/: zephyr,gpio-reset.yaml
dts/bindings/rtc/: nxp,imx-snvs-rtc.yaml
dts/bindings/sensor/: microchip,pac1921.yaml
dts/bindings/spi/: nxp,imx-ecspi.yaml  zephyr,spi-generic.yaml
dts/bindings/syscon/: zephyr,syscon-ram.yaml
include/drivers/: spi_generic.h
include/zephyr/: cache.h  device.h  devicetree.h  kernel.h  syscall.h
include/zephyr/drivers/: adc.h  auxdisplay.h  bbram.h  can.h  charger.h  comparator.h  counter.h  dac.h  dma.h  eeprom.h  emul_fuel_gauge.h  entropy.h  espi.h  espi_saf.h  flash.h  fuel_gauge.h  gnss.h  gpio.h  hwinfo.h  hwspinlock.h  i2c.h  i2s.h  i3c.h  ipm.h  kscan.h  led.h  mbox.h  mdio.h  mspi.h  nfc.h  peci.h  ps2.h  ptp_clock.h  pwm.h  reset.h  retained_mem.h  rtc.h  sdhc.h  sensor.h  smbus.h  (+7 more)
include/zephyr/llext/: llext.h
include/zephyr/logging/: log_ctrl.h  log_msg.h
include/zephyr/mgmt/: updatehub.h
include/zephyr/net/: ethernet.h  net_if.h  net_ip.h  socket.h  socket_service.h  wifi_mgmt.h
include/zephyr/nfc/: iso14443.h
include/zephyr/random/: random.h
include/zephyr/rtio/: rtio.h
include/zephyr/shell/: shell.h  shell_time.h
include/zephyr/sys/: atomic_c.h  errno_private.h  fdtable.h  kobject.h  libc-hooks.h  mutex.h  time_units.h
include/zephyr/toolchain/: common.h
kernel/: atomic_c.c  busy_wait.c  condvar.c  device.c  dynamic.c  errno.c  events.c  float.c  futex.c  init.c  msg_q.c  mutex.c  pipes.c  poll.c  queue.c  sched.c  sem.c  stack.c  thread.c  timeout.c  timer.c  userspace_handler.c
kernel/paging/: statistics.c
lib/libc/arcmwdt/: libc-hooks.c
lib/libc/picolibc/: stdio.c
lib/os/: mutex.c  printk.c
modules/: Kconfig.mcux
modules/hostap/: Kconfig
modules/nanopb/: nanopb.cmake
modules/openthread/: CMakeLists.txt
scripts/: west-commands.yml  west-packages-pip-install.cmd  zephyr_module.py  zpp.py
scripts/ci/: check_compliance.py
scripts/dts/: gen_defines.py
scripts/footprint/: plot.py
scripts/kconfig/: kconfigfunctions.py
scripts/west_commands/: build.py  packages.py
scripts/zpp/: stubs.h
submanifests/: optional.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/llext/: llext_handlers.c
subsys/logging/: log_core.c  log_mgmt.c  log_msg.c
subsys/nfc/: CMakeLists.txt  Kconfig  Kconfig.iso14443  nfc_iso14443a.c
subsys/nvmem/: Kconfig  nvmem.c
subsys/random/: random_handlers.c
subsys/rtio/: rtio_handlers.c
subsys/shell/: CMakeLists.txt  Kconfig  shell.c  shell_time.c  shell_utils.h
tests/: codechecker_config.yaml
(+120 files in other folders)
